# sidebars_api.js
@@ -217,7 +217,6 @@ const sidebars = {
         },
       ],
     },
-
     {
       type: "html",
       value: "Labs", // The HTML to be rendered
@@ -231,6 +230,11 @@ const sidebars = {
           type: "autogenerated",
           dirName: "labs/testkits", // Generate sidebar slice from docs/tutorials/easy
         },
+        {
+          type: "link",
+          label: "Get Testkits",
+          href: "/api-reference/labs/testkits/#get-testkits", // Generate sidebar slice from docs/tutorials/easy
+        },
       ],
     },
     {
@@ -241,6 +245,16 @@ const sidebars = {
           type: "autogenerated",
           dirName: "labs/orders", // Generate sidebar slice from docs/tutorials/easy
         },
+        {
+          type: "link",
+          label: "Create Order",
+          href: "/api-reference/labs/orders/#create-orders", // Generate sidebar slice from docs/tutorials/easy
+        },
+        {
+          type: "link",
+          label: "Cancel Order",
+          href: "/api-reference/labs/orders/#cancel-order", // Generate sidebar slice from docs/tutorials/easy
+        },
       ],
     },
     {
@@ -250,6 +264,21 @@ const sidebars = {
         {
           type: "autogenerated",
           dirName: "labs/results", // Generate sidebar slice from docs/tutorials/easy
+        },
+        {
+          type: "link",
+          label: "Get Results",
+          href: "/api-reference/labs/results/#get-results", // Generate sidebar slice from docs/tutorials/easy
+        },
+        {
+          type: "link",
+          label: "Get Results Raw",
+          href: "/api-reference/labs/results/#get-results-raw", // Generate sidebar slice from docs/tutorials/easy
+        },
+        {
+          type: "link",
+          label: "Get Results Metadata",
+          href: "/api-reference/labs/results/#get-result-metadata", // Generate sidebar slice from docs/tutorials/easy
         },
       ],
     },
